# n8n-research-assistant

./: .env.example  .gitignore  Dockerfile  LICENSE  My workflow.json  README.md  README_SYSTEM.md  WORKFLOW_GUIDE.md  docker-compose.yml  main.py  pyproject.toml  test_semantic_scholar.py
.cursor/rules/: my-custom-rule.mdc
app/: Dockerfile  __init__.py  config.py  main.py
app/api/v1/: knowledge.py  papers.py  search.py
app/models/: paper.py
app/services/: __init__.py  knowledge_manager.py  pdf_processor.py  report_generator.py  semantic_scholar.py
app/utils/: README.md  logger.py
data/: papers_cache.json  research_knowledge_sample.json
docs/: SETUP_API_KEY.md
document/: PRD.md  RESEARCH_WORKFLOW_PRD.md
