[project]
name = "n8n-research-assistant"
version = "0.1.0"
description = "학술 논문 리서치 자동화 시스템"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "requests>=2.31.0",
]
